objects/Gallery_Furniture__c.object
<CustomObject>
    <description>Represents furniture located in a Gallery.</description>
    <fields>
        <fullName>Gallery_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gallery Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Name</field>
                <operation>startsWith</operation>
                <value>Gallery</value>
            </filterItems>
            <filterItems>
                <field>Account.Name</field>
                <operation>contains</operation>
                <value>0,1,2,3,4,5,6,7,8,9</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Gallery Furniture</relationshipLabel>
        <relationshipName>Gallery_Furniture</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gallery_Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gallery Associate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Gallery_Furniture</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HDL_Checklist__c</fullName>
        <label>HDL Checklist #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Piece__c</fullName>
        <label>Piece #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Gallery Furniture</relationshipLabel>
        <relationshipName>Gallery_Furniture</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Register__c</fullName>
        <label>Register #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_Date__c</fullName>
        <label>Sold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sold_To_Address_1__c</fullName>
        <label>Sold To Address 1</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Address_2__c</fullName>
        <label>Sold To Address 2</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Address_3__c</fullName>
        <label>Sold To Address 3</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Alternate_Phone__c</fullName>
        <label>Sold To Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sold_To_City__c</fullName>
        <label>Sold To City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Email__c</fullName>
        <label>Sold To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sold_To_First_Name__c</fullName>
        <label>Sold To First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Last_Name__c</fullName>
        <label>Sold To Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Phone__c</fullName>
        <label>Sold To Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sold_To_Postal_Code__c</fullName>
        <label>Sold To Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_State_Province__c</fullName>
        <label>Sold To State/Province</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Pieces__c</fullName>
        <label>Total Pieces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <label>Transaction #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC__c</fullName>
        <label>UPC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Gallery Furniture</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GF-{00000000}</displayFormat>
        <label>Gallery Furniture Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gallery Furniture</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Sold_Information_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  Sold__c, 
  OR(
    AND(
      ISBLANK(Sold_To_First_Name__c),
      ISBLANK(Sold_To_Last_Name__c)
    ),
    ISBLANK(Sold_To_Address_1__c),
    ISBLANK(Sold_To_City__c),
    ISBLANK(Sold_To_State_Province__c),
    ISBLANK(Sold_To_Postal_Code__c),
    ISBLANK(Sold_Date__c),
    ISBLANK(Register__c),
    ISBLANK(Transaction__c),
    ISBLANK(Piece__c),
    ISBLANK(Total_Pieces__c),
    ISBLANK(Gallery_Associate__c)
  )
)</errorConditionFormula>
        <errorMessage>If sold, please provide Client Information, Sold Date, Register #, Transaction #, Gallery Associate, Piece #, and Total Pieces.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Pieces</fullName>
        <active>true</active>
        <description>Make sure Piece # is less than or equal to Total Pieces.</description>
        <errorConditionFormula>Piece__c &gt; Total_Pieces__c</errorConditionFormula>
        <errorDisplayField>Piece__c</errorDisplayField>
        <errorMessage>Piece # cannot be greater than Total Pieces.</errorMessage>
    </validationRules>
</CustomObject>